[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/Menu/Menu.gd" type="Script" id=1]
[ext_resource path="res://assets/player/skin_preview.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
select_skin_path = NodePath("select_skin")

[node name="IPAddress" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -48.0
margin_right = 320.0
margin_bottom = -16.0
text = "127.0.0.1"
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="UserName" type="LineEdit" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -88.0
margin_right = 320.0
margin_bottom = -56.0
text = "Player"
clear_button_enabled = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ButtonConnect" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -48.0
margin_right = -128.0
margin_bottom = -17.0
text = "Подключиться к серверу"
align = 0

[node name="ButtonHost" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -320.0
margin_top = -88.0
margin_right = -114.0
margin_bottom = -56.0
text = "Создать сервер"
align = 0

[node name="LabelStatus" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -328.0
margin_top = -184.0
margin_right = 328.0
margin_bottom = -151.0
align = 1
valign = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -84.0
margin_right = 120.0
margin_bottom = -60.0
bbcode_enabled = true
bbcode_text = "[right]UsenName:[/right]"
text = "UsenName:"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -44.0
margin_right = 120.0
margin_bottom = -20.0
bbcode_enabled = true
bbcode_text = "[right]IP:[/right]"
text = "IP:"

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -125.0
margin_right = 120.0
margin_bottom = -99.0
bbcode_enabled = true
bbcode_text = "[right]Skin:[/right]"
text = "Skin:"

[node name="select_skin" type="OptionButton" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 128.0
margin_top = -128.0
margin_right = 320.0
margin_bottom = -96.0

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 500, 500 )
transparent_bg = true
render_target_v_flip = true

[node name="skin_preview" parent="Viewport" instance=ExtResource( 2 )]

[node name="Skins" type="Sprite" parent="."]
position = Vector2( 188, 232 )
texture = ExtResource( 3 )

[connection signal="text_changed" from="UserName" to="." method="_on_UserName_text_changed"]
[connection signal="pressed" from="ButtonConnect" to="." method="_on_ButtonConnect_pressed"]
[connection signal="pressed" from="ButtonHost" to="." method="_on_ButtonHost_pressed"]
[connection signal="item_selected" from="select_skin" to="." method="_on_select_skin_item_selected"]
